<resources>
    <string name="app_name">TDATC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">EMAIL ADDRESS</string>
    <string name="pass_hint">PASSWORD</string>
    <string name="confirm_pass_hint">CONFIRM PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="signUp">SIGN UP</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="first_name_hint">FIRST NAME</string>
    <string name="last_name_hint">LAST NAME</string>
    <string name="dob_hint">DATE OF BIRTH</string>
    <string name="gender_hint">GENDER</string>
    <string name="male_hint">MALE</string>
    <string name="female_hint">FEMALE</string>
    <string name="others_hint">OTHERS</string>
    <string name="user_type_hint">USER TYPE</string>
    <string name="health_plan_hint">HEALTH PLAN</string>
    <string name="specialization_hint">SPECIALIZATION</string>
    <string name="taxId_hint">TAX ID</string>
    <string name="string_edit">EDIT</string>
    <string name="string_cancel">CANCEL</string>
    <string name="action_remove">REMOVE</string>
    <string name="string_logout">LOGOUT</string>
    <string name="unable_to_remove_doctors">Unable to remove. No Internet</string>
    <string name="select_doctors">Please select doctors to remove</string>
    <string name="title_activity_mydoctors">My Doctors</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_cap">"Seems like you are not connected to the internet.
 Please try and reload."</string>
    <string name="appointment_doc_name">Doctor Name</string>
    <string name="appointment_details_clinic_name">Clinic name</string>
    <string name="appointment_details_date">date</string>
    <string name="no_internet">No Internet</string>
    <string name="title_select_time_slot">Select a time slot</string>
    <string name="date_string_today">Today, %1$s</string>
    <string name="date_string_tom">Tomorrow, %1$s</string>
    <string name="select_clinic">Select Clinic</string>
    <string name="txt_header">Header</string>
    <string name="txt_secondary">secondary</string>
    <string name="forgot_password">Forgot password\?</string>
    <string name="forgot_label">Forgot Password</string>
    <string name="forgot_password_msg">Enter your Email Address and we\'ll
    send you a confirmation mail</string>
    <string name="confirmation_mail">SEND CONFIRMATION MAIL</string>
    <string name="login_msg">Just remembered\? Login</string>
    <string name="no_med">Oops. Seems like you have no Medications</string>
    <string name="med_search">Medicine name, Substance name</string>
    <string name="preferred_doctor">Preferred Doctor</string>
    <string name="preferred_doctor_msg">Do you want to add this Doctor to your preferred list\?</string>
    <string name="doc_search">Specialities, symptoms, treatments</string>
    <string name="email_error">Email is a required field.</string>
    <string name="password_error">Password is a required field.</string>
    <string name="email_invalid">Email address is invalid.</string>
    <string name="firstName_error">First Name is a required field.</string>
    <string name="lastName_error">Last Name is a required field.</string>
    <string name="dob_error">Date of birth is a required field.</string>
    <string name="confirm_password_error">Confirm password is a required field.</string>
    <string name="password_match_error">Password and Confirm Password doesn\'t match.</string>
    <string name="userType_error">User Type is a required field.</string>
    <string name="healthPlan_error">Health Plan is a required field.</string>
    <string name="specialization_error">Specialization is a required field.</string>
    <string name="taxId_error">Tax Id is a required field.</string>
    <string name="gender_error">Gender is a required field.</string>
    <string-array name="homeListNames">
        <item>Health Record</item>
        <item>Health History</item>
        <item>To-Dos</item>
        <item>Appointments</item>
        <item>References</item>
        <item>Documents</item>
        <item>My Providers</item>
        <item>Labs</item>
        <item>Remainders</item>
    </string-array>
    <string-array name="measurementTools">
        <item>Active Energy Burned</item>
        <item>Basal Energy Burned</item>
        <item>Blood Glucose</item>
        <item>Blood Oxygen Saturation</item>
        <item>Blood Pressure</item>
        <item>Body Mass Index</item>
        <item>Body Temperature</item>
        <item>Body Weight</item>
        <item>Dietary Biotin</item>
        <item>Dietary Caffeine</item>
        <item>Dietary Calcium</item>
        <item>Dietary Carbohydrates</item>
        <item>Dietary Chloride</item>
        <item>Dietary Cholestreol</item>
        <item>Dietary Chromium</item>
        <item>Dietary Copper</item>
        <item>Dietary Energy Consumed</item>
        <item>Dietary Fat Mono-unsaturated</item>
        <item>Dietary Fat Polyunsaturated</item>
        <item>Dietary fat Saturated</item>
        <item>Dietary Fat Total</item>
        <item>Dietary Fiber</item>
        <item>Dietary Folate</item>
        <item>Dietary Iodine</item>
        <item>Dietary Iron</item>
        <item>Dietary Magnesium</item>
        <item>Dietary Manganese</item>
        <item>Dietary Molybdenum</item>
        <item>Dietary Niacin</item>
        <item>Dietary Pantothenic Acid</item>
        <item>Dietary Phosphorus</item>
        <item>Dietary Potassium</item>
        <item>Dietary Protein</item>
        <item>Dietary Riboflavin</item>
        <item>Dietary Selenium</item>
        <item>Dietary Sodium</item>
        <item>Dietary Sugar</item>
        <item>Dietary Thiamin</item>
        <item>Dietary Biotin</item>
        <item>Dietary Caffeine</item>
        <item>Dietary Calcium</item>
        <item>Dietary Carbohydrates</item>
        <item>Dietary Chloride</item>
        <item>Dietary Cholesterol</item>
        <item>Dietary Chromium</item>
        <item>Dietary Copper</item>
        <item>Dietary Energy Consumed</item>
        <item>Dietary Fat Mono-unsaturated</item>
        <item>Dietary Fat Polyunsaturated</item>
        <item>Dietary Fat Saturated</item>
        <item>Dietary Fat Total</item>
        <item>Dietary Fiber</item>
        <item>Dietary Folate</item>
        <item>Dietary Iodine</item>
        <item>Dietary Iron</item>
        <item>Dietary Magnesium</item>
        <item>Dietary Manganese</item>
        <item>Dietary Molybdenum</item>
        <item>Dietary Vitamin A</item>
        <item>Dietary Vitamin B12</item>
        <item>Dietary Vitamin B6</item>
        <item>Dietary Vitamin C</item>
        <item>Dietary Vitamin D</item>
        <item>Dietary Vitamin E</item>
        <item>Dietary Vitamin K</item>
        <item>Dietary Zinc</item>
        <item>Glycosylated Hemoglobin</item>
        <item>Heart Rate</item>
        <item>Height</item>
        <item>Lean Body Mass</item>
        <item>Peak Flow</item>
        <item>Peripheral Perfusion</item>
        <item>Respiratory Rate</item>

    </string-array>
    <string-array name="blood_groups">
        <item>Choose blood group</item>
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="intervals">
        <item>Choose interval</item>
        <item>Every Day</item>
        <item>Weekly Two Times</item>
        <item>Weekly Three Times</item>
    </string-array>
    <string-array name="modes">
        <item>Choose mode</item>
        <item>After Food</item>
        <item>Before Food</item>
    </string-array>
    <string-array name="allergy_status">
        <item>Choose status</item>
        <item>Active</item>
        <item>In active</item>
    </string-array>
    <string-array name="allergy_severity">
        <item>Choose severity</item>
        <item>Low</item>
        <item>Mild</item>
        <item>High</item>
    </string-array>
    <string name="specialization">Specialization</string>
    <string name="logout">Logout</string>
    <string name="amWellPreference"></string>
    <string name="title_activity_health_record">HealthRecord</string>
    <string name="title_activity_upload_value">UploadValue</string>
    <string name="title_activity_list_of_all_measurements">ListOfAllMeasurements</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_patient__home">Patient_Home</string>
    <string name="title_activity_line_graph">LineGraph</string>
    <string name="title_activity_personal_history">PersonalHistory</string>
    <string name="title_activity_medication_search">MedicationSearch</string>
    <string name="title_activity_edit_user_profile">EditUserProfileActivity</string>
    <string name="edit_profile_male">Male</string>
    <string name="edit_profile_female">Female</string>
    <string name="edit_profile_others">Others</string>
    <string name="edit_profile_dob">Date of Birth</string>
    <string name="title_activity_medication_add">MedicationAdd</string>
    <string name="title_activity_allergy_add">AllergyAdd</string>
    <string name="title_activity_physician__home">Physician_Home</string>
    <string name="doctor_profile_other_clinic">Other clinics</string>
    <string name="doctor_profile_experience">Experience</string>
    <string name="doctor_profile_fees">Consultation Fees</string>
    <string name="doctor_profile_recommendation">Recommendations</string>
    <string name="doctor_profile_no_practice">No practices</string>
    <string name="btn_add_practice">Add New Clinic</string>
    <string name="tag_practice_position">practice_position_tag</string>
    <string name="dashboard_practice_profile_view_message">How patients view your practice in the TDATC Search app</string>
    <string name="dashboard_view_profile">View profile</string>
    <string name="dashboard_doctor_edit">Edit Profile</string>
    <string name="list_header_profile">Your Profile</string>
    <string name="list_header_clinics">Your Clinics</string>
    <string name="dashboard_doctor_profile_view_message">How patients view you in the TDATC Search app</string>
    <string name="available_today">AVAILABLE TODAY</string>
    <string name="action_book">BOOK</string>
    <string name="action_prefer">PREFER</string>
    <string name="action_call">CALL</string>
    <string name="sponsored_label">SPONSORED</string>
    <string name="my_doctors">MY DOCTORS</string>
    <string name="providers">PROVIDERS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base_profile">BaseProfileActivity</string>
    <string name="title_activity_lab_details">LabDetails</string>
    <string name="title_activity_my_doctors">MyDoctorsActivity</string>
    <string name="title_activity_remainders">Remainders</string>
    <string name="medicine_details">Medicine Details </string>
    <string name="medication">Medication:</string>
    <string name="chemicalName">Chemical Name:</string>
    <string name="start_dt_tm">Start Date &amp; Time:</string>
    <string name="end_dt_tm">End Date &amp; Time:</string>
    <string name="intake_type">Intake Type:</string>
    <string name="mode_name">Mode Name:</string>
    <string name="string_iinterval">Interval:</string>
    <string name="string_qua">Quantity:</string>
    <string name="string_ok">OK</string>
    <string name="timings_conflicting">"Timings are conflicting.
Try again."</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="next">NEXT</string>
</resources>