<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/head"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:background="#3F51B5"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textCapWords" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textCapWords" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dob_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textCapWords"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textEmailAddress" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textPassword" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pass_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_hint"
            android:textSize="18sp"
            android:padding="6dp"/>

        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/your_color"
                android:text="@string/male_hint"/>

            <RadioButton
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/your_color"
                android:text="@string/female_hint"/>

            <RadioButton
                android:id="@+id/others"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/your_color"
                android:text="@string/others_hint"/>

        </RadioGroup>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/user_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_type_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textCapWords"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="#000000" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/health_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/health_plan_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textCapWords"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:visibility="gone"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/specialization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/specialization_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textCapWords"
            android:visibility="gone"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/tax_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/taxId_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textCapWords"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_reg_signUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:text="@string/signUp"
                android:elevation="2dp"
                android:background="#3F51B5"
                android:textColor="#FFFFFF"
                android:layout_weight="1"/>

            <View android:id="@+id/divider"
                android:background="#ffeaeaea"
                android:layout_width="1.0dp"
                android:layout_height="fill_parent"
                android:layout_margin="10.0dip" />

            <Button
                android:id="@+id/link_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login"
                android:elevation="2dp"
                android:background="#3F51B5"
                android:textColor="#FFFFFF"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>