<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_password_container"
    android:visibility="visible"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black_holo">

    <LinearLayout
        android:id="@+id/forgot_layout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:textSize="17.0sp"
            android:textColor="@color/dark_grey"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/forgot_label"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_label"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:textSize="14.0sp"
            android:textColor="@color/dark_grey"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/forgot_msg"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password_msg"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginTop="10.0dip"
            android:id="@+id/forgot_input_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textEmailAddress"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/btn_send_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:text="@string/confirmation_mail"
            android:elevation="2dp"
            android:background="#3F51B5"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:textSize="16.0sp"
        android:textColor="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:layout_gravity="center_horizontal|bottom"
        android:id="@+id/login_msg"
        android:paddingLeft="16.0dip"
        android:paddingRight="16.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_msg"
        android:layout_below="@id/forgot_layout"/>

</RelativeLayout>