<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/head"
            android:layout_centerHorizontal="true"
            android:background="#3F51B5"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textEmailAddress"
            android:layout_below="@id/logo"
            android:layout_marginTop="24dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_hint"
            android:textSize="16sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            android:inputType="textPassword"
            android:layout_below="@id/input_email"/>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login"
                android:elevation="2dp"
                android:background="#3F51B5"
                android:textColor="#FFFFFF"
                android:layout_weight="1"/>

            <View android:id="@+id/divider"
                android:background="#ffeaeaea"
                android:layout_width="1.0dip"
                android:layout_height="fill_parent"
                android:layout_margin="10.0dip" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:text="@string/signUp"
                android:elevation="2dp"
                android:background="#3F51B5"
                android:textColor="#FFFFFF"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_alignRight="@+id/layout_button"
            android:layout_alignEnd="@+id/layout_button"
            android:textColor="#3F51B5"
            android:textSize="15sp"/>
    </RelativeLayout>
</ScrollView>