<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="22.0sp" android:layout_gravity="center_horizontal" android:id="@+id/descriptor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_16" android:textStyle="bold" />
        <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TimePicker android:layout_gravity="center" android:id="@+id/time_picker_from" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TimePicker android:layout_gravity="center" android:id="@+id/time_picker_to" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@+id/time_error_ll" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/font_medium" android:gravity="center" android:layout_gravity="center" android:id="@+id/time_mismatch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_16" android:text="@string/timings_conflicting" android:drawableTop="@drawable/ic_verification_error" android:textStyle="normal" />
            </LinearLayout>
        </FrameLayout>
        <RelativeLayout android:layout_gravity="right" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:textSize="@dimen/font_small" android:textColor="@color/primary_blue" android:layout_gravity="center_vertical" android:id="@+id/button_cancel" android:background="@drawable/selector_synapse_list_glass" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/button_dismiss" android:layout_toLeftOf="@+id/button_submit" android:layout_alignParentRight="false" android:textAllCaps="true" />
            <Button android:enabled="true" android:textSize="@dimen/font_small" android:textColor="@color/primary_blue" android:layout_gravity="center_vertical" android:id="@+id/button_submit" android:background="@drawable/selector_synapse_list_glass" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/next" android:layout_alignParentRight="true" android:textAllCaps="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>